[package]
name = "udptcp"
version = "0.1.0"
authors = ["TurtlePU <sokolov.p64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
itertools = "0.10.0"
rand = "0.8.3"
tokio = { version = "1.6.0", features = ["full"] }
